--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,10 @@
     background-color: #4b5563; /* Tailwind's gray-700 */
     border-radius: 6px;
 }
+
+body {
+    font-family: "Mulish", Segoe UI Symbol, sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+}
